<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.foo</groupId>
  <artifactId>springfb</artifactId>
  <packaging>war</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>spring-fb-app Maven Webapp</name>
  <url>http://maven.apache.org</url>
  <properties>
    <encoding>UTF-8</encoding>
    <jdk.version>1.8</jdk.version>
    <spring.version>4.2.6.RELEASE</spring.version>
    <jstl.version>1.2</jstl.version>
    <servletapi.version>3.1.0</servletapi.version>
    <servlet.jsp.version>2.3.1</servlet.jsp.version>
    <spring-oxm.version>3.0.4.RELEASE</spring-oxm.version>
    <hibernate.version>5.2.12.Final</hibernate.version>
    <hibernate-validator.version>6.0.0.Final</hibernate-validator.version>
    <tomcat-dbcp.version>9.0.2</tomcat-dbcp.version>
    <tomcat-juli.version>5.5.23</tomcat-juli.version>
    <mysql.connector.version>6.0.6</mysql.connector.version>
    <joda-time.version>2.9.9</joda-time.version>
    <jadira.usertype.version>6.0.1.GA</jadira.usertype.version>
    <jackson.version>2.7.2</jackson.version>
    <tiles.version>3.0.7</tiles.version>
    <jetty.version>9.3.9.v20160517</jetty.version>
<!--     <jetty.version>9.4.8.v20171121</jetty.version> -->
    <log4j2.version>2.6.1</log4j2.version>
    <slf4j.version>1.7.25</slf4j.version>
    <junit.version>3.8.1</junit.version>
    <testng.version>6.13.1</testng.version>
    <mockito.version>1.10.19</mockito.version>
    <h2.version>1.4.196</h2.version>
    <dbunit.version>2.2</dbunit.version>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>javax.el</groupId>
      <artifactId>javax.el-api</artifactId>
      <version>3.0.0</version>
      <scope>provided</scope>
    </dependency>

   <!-- Spring MVC Dependency -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-core</artifactId>
      <version>${spring.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>${spring.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
    </dependency>
   
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
    </dependency>
    
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-orm</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <!-- JSTL, Servlet, JSP Dependency -->
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>${jstl.version}</version>
    </dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>${servletapi.version}</version>
      <scope>provided</scope>
    </dependency>
    
    <!-- Spring XML Marshalling Dependency -->
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-oxm</artifactId>
      <version>${spring.version}</version>
    </dependency>

    <!-- Jackson API for JSON -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- Hibernate -->
    <dependency>
      <groupId>org.hibernate</groupId>
      <artifactId>hibernate-core</artifactId>
      <version>${hibernate.version}</version>
    </dependency>
        
    <dependency>
    	<groupId>org.hibernate</groupId>
    	<artifactId>hibernate-validator</artifactId>
    	<version>${hibernate-validator.version}</version>
    </dependency>
    
    <!-- Tomcat connection pool – DriverManagerDataSource -->
<!--     <dependency> -->
<!--       <groupId>org.apache.tomcat</groupId> -->
<!--       <artifactId>tomcat-dbcp</artifactId> -->
<!--       <version>${tomcat-dbcp.version}</version> -->
<!--     </dependency> -->
    
<!--     <dependency> -->
<!--       <groupId>tomcat</groupId> -->
<!--       <artifactId>tomcat-juli</artifactId> -->
<!--       <version>${tomcat-juli.version}</version> -->
<!--       <scope>provided</scope> -->
<!--     </dependency> -->
    
    <!-- MySQL -->
    <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>${mysql.connector.version}</version>
    </dependency>

    <!-- Joda-Time -->       
    <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>${joda-time.version}</version>
    </dependency>
     
    <!-- To map JodaTime with database type -->      
    <dependency>
        <groupId>org.jadira.usertype</groupId>
        <artifactId>usertype.core</artifactId>
        <version>${jadira.usertype.version}</version>
    </dependency>
        
    <!-- Tiles API -->
<!--     <dependency> -->
<!--         <groupId>org.apache.tiles</groupId> -->
<!--         <artifactId>tiles-api</artifactId> -->
<!--         <version>${tiles.version}</version> -->
<!--     </dependency> -->

<!--     <dependency> -->
<!--         <groupId>org.apache.tiles</groupId> -->
<!--         <artifactId>tiles-core</artifactId> -->
<!--         <version>${tiles.version}</version> -->
<!--     </dependency> -->

<!--     <dependency> -->
<!--         <groupId>org.apache.tiles</groupId> -->
<!--         <artifactId>tiles-servlet</artifactId> -->
<!--         <version>${tiles.version}</version> -->
<!--     </dependency> -->

<!--     <dependency> -->
<!--         <groupId>org.apache.tiles</groupId> -->
<!--         <artifactId>tiles-jsp</artifactId> -->
<!--         <version>${tiles.version}</version> -->
<!--     </dependency> -->
 
    <!-- Logging -->
    
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${log4j2.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-test</artifactId>
        <version>${spring.version}</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.testng</groupId>
        <artifactId>testng</artifactId>
        <version>${testng.version}</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>${h2.version}</version>
        <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>dbunit</groupId>
        <artifactId>dbunit</artifactId>
        <version>${dbunit.version}</version>
        <scope>test</scope>
    </dependency>

  </dependencies>
  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>

      <!-- For Jetty Plugin -->
      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>${jetty.version}</version>
        <configuration> 
          <scanIntervalSeconds>10</scanIntervalSeconds>
          <connectors>
            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
              <port>8080</port>
            </connector>
          </connectors>
        </configuration> 
      </plugin>
      
<!--       <plugin> -->
<!--         <groupId>org.apache.tomcat.maven</groupId> -->
<!--         <artifactId>tomcat7-maven-plugin</artifactId> -->
<!--         <version>2.2</version> -->
<!--         <configuration> -->
<!--           <path>/</path> -->
<!--           <port>8899</port> -->
<!--         </configuration> -->
<!--       </plugin> -->
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
      </plugin>

      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.2</version>
        <configuration>
          <port>8080</port>
          <path>/</path>
          <username>admin</username>  
          <password>password</password>      
          <contextReloadable>true</contextReloadable>
          <systemProperties>
            <JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
            <MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8013</MAVEN_OPTS>
          </systemProperties>
        </configuration>
      </plugin>
        
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <warSourceDirectory>src/main/webapp</warSourceDirectory>
            <warName>springfb</warName>
            <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
